Update singbox advanced module 1,2,3

--- a/docs/en/vps/singbox/advanced/m1.md
+++ b/docs/en/vps/singbox/advanced/m1.md
@@ -8,22 +8,62 @@ icon: material/video
 
 ### introduction and prerequisite
 
+To get started with the course 
+
+- make sure you have seen the **sing-box proxy overview** course
+- our test environment is Linux and a Terminal
+- a VPS (Virtual Private Server) with a public IP
+- your favorite text editor
+
+
+!!! note
+    if you are already familiar with any of modern proxies, you can take the course
+    directly
+
+!!! tip
+    prior experience with :octicons-terminal-16: Terminal Multiplexers are valuable 
+    since we will open many Tabs and Sessions
+
 ---
 
 ### alternative modern proxies overview (clash, xray, hy2)
+
+There are more modern proxies like
 
 - [clash](https://github.com/MetaCubeX/mihomo)
 - [xray](https://github.com/XTLS/Xray-core)
 - [hysteria](https://github.com/apernet/hysteria)
 
+and sing-box is one of them, if be familiar with any, you can learn others easily
+
 ---
 
 ### forward proxies versus reverse proxies
+
+We will see the differences between the two, the forward proxies
+
+- [sing-box](https://github.com/SagerNet/sing-box)
+- [clash](https://github.com/MetaCubeX/mihomo)
+- [xray](https://github.com/XTLS/Xray-core)
+- [hysteria](https://github.com/apernet/hysteria)
+
+and the reverse proxies 
+
+- [haproxy](https://www.haproxy.org/)
+- [nginx](https://nginx.org/)
+- [traefikk](https://traefik.io/traefik)
+- [envoy](https://www.envoyproxy.io/)
 
 ---
 
 ### architecture of forward and reverse
 
+We will see the core design of forward proxies and reverse proxies
+
 ---
 
 ### singbox as reverse proxy
+
+We will do a test of using sing-box as a reverse proxy. We see that we can make it 
+work, but also we know forward proxies have not been intended to be used as a reverse 
+proxy.
