--- a/docs/en/vps/singbox/advanced/m2.md
+++ b/docs/en/vps/singbox/advanced/m2.md
@@ -8,14 +8,24 @@ icon: material/video
 
 ### split tunneling
 
+We see what is a split tunnel and its use cases
+
 ---
 
 ### full tunneling
+
+We see what is a full tunnel and its use cases
 
 ---
 
 ### non-root users
 
+For non-root users we can use the proxy part of sing-box, but for tun use cases 
+we should have root privilege
+
 ---
 
 ### L3 versus L4 tun interfaces
+
+Well known VPNs like :simple-openvpn: OpenVPN, :simple-wireguard: WireGuard operate 
+at layer 3 (tun mode) but sing-box tun interface is not a layer 3 but a layer 4 one
