Add youtube link for singbox/advanced/m1

--- a/docs/en/vps/singbox/advanced/m1.md
+++ b/docs/en/vps/singbox/advanced/m1.md
@@ -4,7 +4,9 @@ icon: material/video
 
 # :material-video: module 1 review
 
+### Available to watch on
 
+- :simple-youtube: YouTube [singbox proxy advanced module 1 review](https://www.youtube.com/watch?v=LVAMm5YU9Bs&list=PL_akDzx9nCAH80lv7KcjVGFZTUAccUu5o)
 
 ### introduction and prerequisite
 
