Add youtube link for singbox > advanced > m2

--- a/docs/en/vps/singbox/advanced/m2.md
+++ b/docs/en/vps/singbox/advanced/m2.md
@@ -4,6 +4,9 @@ icon: material/video
 
 # :material-video: module 2 tun
 
+### Available to watch on
+
+- :simple-youtube: YouTube [singbox proxy advanced module 2 tun](https://www.youtube.com/playlist?list=PL_akDzx9nCAFyjagd5mRWQM1SsvvgmVsN)
 
 
 ### split tunneling
