Update for module 4 routing

--- a/docs/en/vps/singbox/advanced/m3.md
+++ b/docs/en/vps/singbox/advanced/m3.md
@@ -5,6 +5,10 @@ icon: material/video
 # :material-video: module 3 DNS
 
 
+### Available to watch on
+
+- :simple-youtube: YouTube [singbox proxy advanced module 3 DNS](https://www.youtube.com/watch?v=Tc0tCRSthYc&list=PL_akDzx9nCAH2GBY9UEXWUsUo2aMr6WTc)
+
 
 ### dns resolution
 
@@ -16,6 +20,8 @@ icon: material/video
 
 ### dns hijacking
 
+[DNS hijacking in sing-box](https://sing-box.sagernet.org/configuration/route/rule_action/#hijack-dns)
+
 ---
 
 ### dns over proxy
@@ -24,14 +30,23 @@ icon: material/video
 
 ### dns over tls DoT
 
+[DNS over TLS in sing-box](https://sing-box.sagernet.org/configuration/dns/server/tls/)
+
 ---
 
 ### private dns server
+
+[smartdns page](https://pymumu.github.io/smartdns/en/) and
+[smartdns github repo](https://github.com/pymumu/smartdns)
 
 ---
 
 ### dns rule action
 
+[DNS rule action in sing-box](https://sing-box.sagernet.org/configuration/dns/rule_action/)
+
 ---
 
 ### dns fakeip
+
+[DNS fakeip in sing-box](https://sing-box.sagernet.org/configuration/dns/server/fakeip/)
